--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 body{
 
   height:1000px;
+  overflow-x:hidden;
 }
 
     /* تنسيق الحاوية الرئيسية */
@@ -1526,4 +1527,5 @@ body{
 
 
 </html>
+
 
