--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@ body{
                       <h6 style="font-weight: 800; margin-top: 20px;">1- 15 محاضرة تعليمية شاملة:</h6>
                       <p style="margin-top: 10px;">
                         تغطي جميع محاور اختبار STEP وتشمل:
-                      <ul style="margin-right: 20px; border-right: 1px solid rgb(230, 230, 230); list-style: none;">
+                      <ul style="padding-right: 20px;  list-style: disc;">
                         <li style="list-style-position: inside;">القراءة</li>
                         <li style="list-style-position: inside;">الاستماع</li>
                         <li style="list-style-position: inside;"> القواعد</li>
@@ -1527,6 +1527,7 @@ body{
 
 
 </html>
+
 
 
 
