--- a/index.html
+++ b/index.html
@@ -1484,7 +1484,7 @@ body{
     <div class="button-section">
       <button class="btn btn-warning fw-bold py-2 px-4 rounded-3 text-white"
         style="background-color: #ff9900; border-color: #ff9900;">
-        اشتري الآن
+        سجل الأن
       </button>
     </div>
 
@@ -1527,6 +1527,7 @@ body{
 
 
 </html>
+
 
 
 
